Bug 1752392 - Don't drop CSSStyleSheet.cssRules from CSSStyleSheet.replace/Sync(). r=firefox-style-system-reviewers,layout-reviewers,boris

As per spec this object should always return the same JS object.

Differential Revision: https://phabricator.services.mozilla.com/D144569